--- a/style.css
+++ b/style.css
@@ -6,4 +6,37 @@
 
 body {
     margin: inherit;
+    display: grid;
+    grid-template: 1fr 1fr 3fr 3fr / 1fr 2fr 1fr;
+}
+
+.sidebar {
+    background-color: rgb(81, 126, 214);
+    grid-area: 1 / 1 / 5 / 2;
+}
+
+.header {
+    grid-area: 1 / 2 / 2 / 4;
+}
+
+.subheader {
+    grid-area: 2 / 2 / 3 / 4;
+}
+
+.projects,
+.announcements,
+.trending {
+    background-color: rgb(201, 201, 201);
+}
+
+.projects {
+    grid-area: 3 / 2 / 5 / 3;
+}
+
+.announcements {
+    grid-area: 3 / 3 / 4 / 4;
+}
+
+.trending {
+    grid-area: 4 / 3 / 5 / 4;
 }
