--- a/style.css
+++ b/style.css
@@ -35,10 +35,62 @@ body {
 
 .header {
     grid-area: 1 / 2 / 2 / 4;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.header input[type='search']{
+    width: 30vw;
+    height: 24px;
+    margin-right: 20vw;
+    border: none;
+    background-color: rgb(201, 201, 201);
+    border-radius: 10px;
+}
+
+#userIconHeader {
+    width: 40px;
+    height: 40px;
+    margin: 2px;
 }
 
 .subheader {
     grid-area: 2 / 2 / 3 / 4;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.subheader div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-right: 10vw;
+}
+
+.subheader p:last-child {
+    font-size: 2rem;
+}
+.subheader p {
+    margin: 0;
+}
+
+.subheader button {
+    color: white;
+    background-color: rgb(81, 126, 214);
+    border: none;
+    border-radius: 10px;
+    width: min(10vw, 120px);
+    font-size: 1.3rem;
+    height: 30px;
+}
+
+#userIconSubheader {
+    margin: 2px;
+    width: 55px;
+    height: 55px;
 }
 
 .projects,
